--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,11 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
 }
 
 ::selection {
