feat: add CHKL RESET functionality to reset current checklist

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --menu-green: #0fe913;
   --text-white: #ffffff;
   --text-green: #0efd12;
-  --text-cyan: #0baacf;
+  --text-cyan: #0dbce4;
   --highlight-magenta: #e165e0;
   --check-gray: #6b7c94;
   --custom-cursor:
